--- a/20180415-1 - Air Strike/manifest.json
+++ b/20180415-1 - Air Strike/manifest.json
@@ -5,7 +5,8 @@
  "start_url":"/",
  "background_color":"#2196f3",
  "theme_color":"#2196f3",
- "display":"standalone",
+ "display": "standalone",
+ "orientation": "landscape",
  "icons": [
   {
    "src": "\/Assets/icon/icon-36x36.png",
