--- a/20180415-1 - Air Strike/manifest.json
+++ b/20180415-1 - Air Strike/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Air Strike",
   "lang":"en-US",
   "start_url":"/",
-  "background_color":"#FFFFFF",
-  "theme_color":"#FFFFFF",
+  "background_color":"#003366",
+  "theme_color":"#003366",
   "display":"standalone",
   "icons": [
    {
