--- a/20180415-1 - Air Strike/manifest.json
+++ b/20180415-1 - Air Strike/manifest.json
@@ -5,7 +5,8 @@
   "start_url":"/",
   "background_color":"#003366",
   "theme_color":"#003366",
-  "display":"standalone",
+  "display":"fullscreen",
+  "orientation":"landscape",
   "icons": [
    {
     "src": "\/Assets/icon/android-icon-36x36.png",
