--- a/20180415-1 - Air Strike/manifest.json
+++ b/20180415-1 - Air Strike/manifest.json
@@ -44,7 +44,7 @@
     }
   ],
 
-  "start_url": "/?utm_source=homescreen",
+  "start_url": "/",
   "background_color": "#2196f3",
   "theme_color": "red",
   "display": "standalone",
